@@ -97,12 +97,14 @@ It can also be useful if you want to trigger a recursive delivery and then ensur
         <td>No. No recursive delivery is done by default</td></tr>
     <tr><td>validate</td><td>true to force ivy files validation against ivy.xsd, false to force no validation</td>
         <td>No. Defaults to default ivy value (as configured in configuration file)</td></tr>
-    <tr><td>replacedynamicrev</td><td>true to replace dynmic revisions by static ones in the delivered file, false to avoid this replacement <span class="since">since 1.3</span></td>
+    <tr><td>replacedynamicrev</td><td>true to replace dynmic revisions by static ones in the delivered file, false to avoid this replacement <span class="since">(since 1.3)</span></td>
         <td>No. Defaults to true</td></tr>
 	<tr><td>settingsRef</td><td>A reference to the ivy settings that must be used by this task <span class="since">(since 2.0)</span></td>
 		<td>No, 'ivy.instance' is taken by default.</td></tr>    
-	<tr><td>conf</td><td>comma-separated list of configurations to include in the delivered file. Accepts wildcards. <span class="since">since 2.0</span></td>
+	<tr><td>conf</td><td>comma-separated list of configurations to include in the delivered file. Accepts wildcards. <span class="since">(since 2.0)</span></td>
         <td>No. Defaults to all configurations</td></tr>
+	<tr><td>generateRevConstraint</td><td>true to automatically generate a 'revConstraint' attribute in the deliverd file (see the [[ivyfile/dependency]] page for more info about this attribute), false to never generate this attribute <span class="since">(since 2.0.1)</span></td>
+        <td>No. Defaults to true</td></tr>
 </tbody>
 </table>
 
