@@ -1121,6 +1121,12 @@ specifier|private
 name|String
 name|pubBranch
 decl_stmt|;
+specifier|private
+name|boolean
+name|generateRevConstraint
+init|=
+literal|true
+decl_stmt|;
 specifier|public
 name|void
 name|setCache
@@ -1423,6 +1429,30 @@ block|{
 name|conf
 operator|=
 name|confs
+expr_stmt|;
+block|}
+specifier|public
+name|boolean
+name|isGenerateRevConstraint
+parameter_list|()
+block|{
+return|return
+name|generateRevConstraint
+return|;
+block|}
+specifier|public
+name|void
+name|setGenerateRevConstraint
+parameter_list|(
+name|boolean
+name|generateRevConstraint
+parameter_list|)
+block|{
+name|this
+operator|.
+name|generateRevConstraint
+operator|=
+name|generateRevConstraint
 expr_stmt|;
 block|}
 specifier|public
@@ -1848,6 +1878,11 @@ operator|.
 name|setResolveId
 argument_list|(
 name|resolveId
+argument_list|)
+operator|.
+name|setGenerateRevConstraint
+argument_list|(
+name|generateRevConstraint
 argument_list|)
 operator|.
 name|setPubBranch
