@@ -156,6 +156,13 @@ specifier|private
 name|String
 name|branch
 decl_stmt|;
+comment|/**      * True to indicate that the revConstraint attribute should be generated if      * applicable, false to never generate the revConstraint attribute.      */
+specifier|private
+name|boolean
+name|generateRevConstraint
+init|=
+literal|true
+decl_stmt|;
 specifier|public
 name|ParserSettings
 name|getSettings
@@ -423,6 +430,33 @@ operator|.
 name|branch
 operator|=
 name|pubBranch
+expr_stmt|;
+return|return
+name|this
+return|;
+block|}
+specifier|public
+name|boolean
+name|isGenerateRevConstraint
+parameter_list|()
+block|{
+return|return
+name|generateRevConstraint
+return|;
+block|}
+specifier|public
+name|UpdateOptions
+name|setGenerateRevConstraint
+parameter_list|(
+name|boolean
+name|generateRevConstraint
+parameter_list|)
+block|{
+name|this
+operator|.
+name|generateRevConstraint
+operator|=
+name|generateRevConstraint
 expr_stmt|;
 return|return
 name|this
