@@ -621,6 +621,189 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testNotGenerateRevConstraint
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|project
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.dep.file"
+argument_list|,
+literal|"test/java/org/apache/ivy/ant/ivy-latest.xml"
+argument_list|)
+expr_stmt|;
+name|IvyResolve
+name|res
+init|=
+operator|new
+name|IvyResolve
+argument_list|()
+decl_stmt|;
+name|res
+operator|.
+name|setProject
+argument_list|(
+name|project
+argument_list|)
+expr_stmt|;
+name|res
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|deliver
+operator|.
+name|setPubrevision
+argument_list|(
+literal|"1.2"
+argument_list|)
+expr_stmt|;
+name|deliver
+operator|.
+name|setDeliverpattern
+argument_list|(
+literal|"build/test/deliver/ivy-[revision].xml"
+argument_list|)
+expr_stmt|;
+name|deliver
+operator|.
+name|setGenerateRevConstraint
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|deliver
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+comment|// should have done the ivy delivering
+name|File
+name|deliveredIvyFile
+init|=
+operator|new
+name|File
+argument_list|(
+literal|"build/test/deliver/ivy-1.2.xml"
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|deliveredIvyFile
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ModuleDescriptor
+name|md
+init|=
+name|XmlModuleDescriptorParser
+operator|.
+name|getInstance
+argument_list|()
+operator|.
+name|parseDescriptor
+argument_list|(
+operator|new
+name|IvySettings
+argument_list|()
+argument_list|,
+name|deliveredIvyFile
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"apache"
+argument_list|,
+literal|"resolve-latest"
+argument_list|,
+literal|"1.2"
+argument_list|)
+argument_list|,
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|DependencyDescriptor
+index|[]
+name|dds
+init|=
+name|md
+operator|.
+name|getDependencies
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|dds
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.2"
+argument_list|)
+argument_list|,
+name|dds
+index|[
+literal|0
+index|]
+operator|.
+name|getDependencyRevisionId
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.2"
+argument_list|)
+argument_list|,
+name|dds
+index|[
+literal|0
+index|]
+operator|.
+name|getDynamicConstraintDependencyRevisionId
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testWithResolveId
 parameter_list|()
 throws|throws
